cmake_minimum_required(VERSION 3.16)
project(Tetris_Game LANGUAGES CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
option(BUILD_SHARED_LIBS "Build shared libraries" OFF)

include(FetchContent)
FetchContent_Declare(SFML
    GIT_REPOSITORY https://github.com/SFML/SFML.git
    GIT_TAG 2.6.x)
FetchContent_MakeAvailable(SFML)

add_executable(Tetris_Game src/main.cpp src/Game.hpp src/Tile.hpp)
target_link_libraries(Tetris_Game PRIVATE sfml-graphics)
target_link_libraries(Tetris_Game PRIVATE sfml-audio)
target_link_libraries(Tetris_Game PRIVATE sfml-window)
target_link_libraries(Tetris_Game PRIVATE sfml-system)
target_compile_features(Tetris_Game PRIVATE cxx_std_17)

if(WIN32)
    add_custom_command(
        TARGET Tetris_Game
        COMMENT "Copy OpenAL DLL"
        PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:Tetris_Game>
        VERBATIM)
endif()

install(TARGETS Tetris_Game)
